<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/compose_new_note"
            android:textColor="@color/white"
            android:textSize="42sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_regular"
            android:justificationMode="inter_word"
            android:text="@string/description"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24"
            app:helperText="Required"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:startIconDrawable="@drawable/baseline_title_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_title"
                android:inputType="text"
                android:maxLength="101" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="500"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24"
            app:helperText="Required"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:startIconDrawable="@drawable/baseline_abc_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_note"
                android:maxLength="501" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/choose_the_priority"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_regular"
            android:justificationMode="inter_word"
            android:text="@string/description_p"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/background_radio_group"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/buttonLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:padding="8dp"
                android:text="@string/low"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/buttonMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:padding="8dp"
                android:text="@string/medium"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/buttonHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:padding="8dp"
                android:text="@string/high"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RadioGroup>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_marginTop="18dp"
                android:id="@+id/buttonSaveNote"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:background="@drawable/button_background"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>




</ScrollView>